# otus

./: Cargo.toml  README.md
.github/workflows/: github-actions-demo.yml  release.yml
hw-01/: CMakeLists.txt  helloworld.cpp  test_version.cpp
hw-01/src/: helloworld.cpp  lib.cpp  version.h  version.h.in
hw-02/: CMakeLists.txt  ip_filter.cpp  main.rs
hw-02/src/: ip_filter.cpp  ip_filter.h  main.cpp
hw-02/test/: ip_filter_test.cpp
src/: main.rs
